src/scss/_typography.scss
@import url('https://fonts.googleapis.com/css?family=Chivo:400,400i,700,700i,900,900i|Overpass:100,100i,200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i');

$text_xs_title: 3.2rem;
$text_xs_subtitle: 2.4rem;
$text_xs_body: 1.8rem;
$text_xs_caption: 1.2rem;

$text_md_title: 4.2rem;
$text_md_subtitle: 2.8rem;
$text_md_body: 2.1rem;
$text_md_caption: 1.2rem;

html {
    font-size: 62.5%;
    text-rendering: optimizeLegibility;    
}

.title {
    color: $textPrimary;
    font-family: 'Chivo', sans-serif;
    font-size: $text_xs_title;
    font-weight: 700;
    line-height: 35px;
    @include breakpoint(md) {
        font-size: $text_md_title;
        line-height: 43px;
    } 
}


.subtitle {
    color: $textPrimary;
    font-family: 'Chivo', sans-serif;
    font-size: $text_xs_subtitle;
    line-height: 30px;
    @include breakpoint(md) {
        font-size: $text_md_subtitle;
        line-height: 43px;
    } 
}

.sectionTitle {
    color: $lightGrey;
    font-family: 'Overpass', sans-serif;
    font-size: $text_xs_subtitle;
    font-weight: 200;
    @include breakpoint(md) {
        font-size: $text_md_subtitle;
        line-height: 34px;
    } 
}

.bodyText {
    color: $lightGrey;
    font-family: 'Overpass', sans-serif;
    font-size: $text_xs_body;
    font-weight: 200;
    line-height: 2.7rem;
    @include breakpoint(md) {
        font-size: $text_md_body;
        line-height: 33px;
    } 
}

.inline-link {
    border-bottom: 1px dotted $lightGrey;
    color: $lightGrey;
    font-family: 'Overpass', sans-serif;
    font-size: $text_xs_body;
    font-weight: 200;
    line-height: 2.7rem;
    @include breakpoint(md) {
        font-size: $text_md_body;
        line-height: 33px;
    } 
}

.blockLink {
    color: $lightGrey;
    font-family: 'Overpass', sans-serif;
    font-size: $text_xs_body;
    font-weight: 200;
    line-height: 2.7rem;
    @include breakpoint(md) {
        font-size: $text_md_body;
        line-height: 33px;
    } 
    // &::before {
    //     content: '';
    //     display: block;
    //     background-color: yellow;
    //     mix-blend-mode: multiply;
    //     position: absolute;
    //     height: 33px;
    //     width: 200px;
    // }
    &.header {
        margin-right: 1rem;
    }
}

.caption {
    color: $lightGrey;
    font-family: 'Overpass', sans-serif;
    font-weight: 200;
    line-height: 2.7rem;
    font-size: $text_xs_caption;
    text-align: center;
}

